--- a/nodes/processstack/processstack.html
+++ b/nodes/processstack/processstack.html
@@ -63,8 +63,7 @@
         defaults: {
             name: {value:""},
             stack: {value:"", type:"pst-stack", required:true},
-            autoUpdate: {value:false},
-            useMQTT: {value:false}
+            autoUpdate: {value:false}
         },
         inputs: 1,
         outputs: 2,
