add widget queue

--- a/nodes/processstack/processstack.html
+++ b/nodes/processstack/processstack.html
@@ -8,6 +8,7 @@
         },
         inputs: 1,
         outputs: 1,
+		align: "right",  
         icon: "icons/stackin.svg",
         label: function() {
             //return this.name||("Push - "+(this.stack.manufacturingcell.processflow.name||"")+"/"+(this.stack.manufacturingcell.name||"")+"/"+(this.stack.name||''));
